<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="96dp"
        android:gravity="center"
        android:text="@string/titulo2"
        android:textColor="#225CD3"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="609dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo2">

        <EditText
            android:id="@+id/nomCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/apellCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/telCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/mailCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/empresaCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empresa_o_actividad"
            android:inputType="text"
            android:importantForAutofill="no" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/guardarCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_redondo"
            android:text="@string/guardar" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>


        <Button
            android:id="@+id/volverAgenda1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_redondo"
            android:text="@string/volver_a_la_agenda" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>